# django-rest-tsg

./: .gitignore  CHANGELOG.rst  LICENSE  README.md  README.rst  conftest.py  pyproject.toml  tox.ini
.github/workflows/: coverage.yml
django_rest_tsg/: __init__.py  apps.py  build.py  templates.py  typescript.py
django_rest_tsg/management/: buildtypescript.py
django_rest_tsg/management/commands/: buildtypescript.py
tests/: __init__.py  models.py  serializers.py  settings.py  test_build.py  test_dataclass.py  test_django_rest_tsg.py  test_enum.py  test_serializer.py  tsgconfig.py
