[tool.poetry]
name = "django-rest-tsg"
version = "0.1.0"
license = "MIT"
description = "A typescript code generator for Django Rest Framework."
readme = "README.rst"
repository = "https://github.com/jinkanhq/django-rest-tsg"
authors = ["Yinain Chin <yinian@jinkan.org>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
include = ["README.rst", "CHANGELOG.rst", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.9.0"
django = "^3.2.9"
djangorestframework = "^3.12.4"
djangorestframework-dataclasses = "^1.0.0"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.4.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "BFSU Mirror"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
