[tool.poetry]
name = "django-rest-tsg"
version = "0.1.3"
license = "MIT"
description = "A typescript code generator for Django Rest Framework."
readme = "README.rst"
repository = "https://github.com/jinkanhq/django-rest-tsg"
authors = ["Yinian Chin <yinian@jinkan.org>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
include = ["README.rst", "CHANGELOG.rst", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.9.0"
django = "^3.0"
djangorestframework = "^3.12"
djangorestframework-dataclasses = "^1.0.0"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.4.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{39}-django{30,31}-drf{312}
          py{39,310}-django{32}-drf{312}

[gh-actions]
python =
    3.9: py39
    3.10: py310

[testenv]
deps =
    pytest>=6.2.5
    pytest-django>=4.4.0
    pytest-cov>=3.0
    djangorestframework-dataclasses>=1.0.0
    inflection>=0.5.1
    django30: Django>=3.0,<3.1
    django31: Django>=3.1,<3.2
    django32: Django>=3.2,<3.3
    drf312: djangorestframework>=3.12,<3.13
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run pytest --cov=./ --cov-report=xml
"""
